[package]
name = "search_and_sip"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.11.0", features = ["full"] }
tokio-stream = "0.1.7"
tokio-util = { version = "0.6.3", features = ["full"] }
serde_derive = { version = "1.0.130" }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
http = "0.2.4"
bytes = "1.1.0"
futures = "0.3.17"
time = "0.1"
httparse = "1.5.1"