[package]
name = "search_and_sip"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.16.1", features = ["full"] }
warp = "0.3.2"
futures = "0.3.21"
serde = { version = "1.0.136", features = ["derive"] }
